--- a/public/lahetus.html
+++ b/public/lahetus.html
@@ -37,6 +37,18 @@
 								<div id="logo-text-w" class="center-block"></div>
 							</div>
 						</li>
+						<!--_____________ SIDEBAR SEARCH _______________-->
+						<li>
+							<form class="sidebar-search" role="search">
+								<div class="input-group">
+									<input type="text" class="form-control" placeholder="Otsi midagi..." name="srch-term" id="srch-term">
+									<div class="input-group-btn">
+										<button class="btn btn-primary" type="submit"><i class="glyphicon glyphicon-search"></i></button>
+									</div>
+								</div>
+							</form>
+						</li>
+						<!--_____________ SIDEBAR SEARCH END _______________-->
 						<li class="active">
 							<a href="#"><i class="fa fa-university"></i> <span class="nav-label">Minu töölaud</span><span class="fa arrow"></span></a>
 							<ul class="nav nav-second-level">
@@ -45,13 +57,14 @@
 								<li><a href="/docs/9045239624610520" id="_docs" class="ajax-load">Töökorraldus</a></li>
 								<li><a href="/news/9045239624610520" id="_news" class="ajax-load">Uudised</a></li>
 							</ul>
-						</li><li>
-						<a href="#"><i class="fa fa-globe"></i> <span class="nav-label">Meediapank</span><span class="fa arrow"></span></a>
-						<ul class="nav nav-second-level">
-							<li><a href="/media/9045239624610520" id="_media" class="ajax-load">Meediahaldus</a></li>
-							<li><a href="/tube/9045239624610520" id="_tube" class="ajax-load">Videosirvik</a></li>
+						</li>
+						<li>
+							<a href="#"><i class="fa fa-globe"></i> <span class="nav-label">Meediapank</span><span class="fa arrow"></span></a>
+							<ul class="nav nav-second-level">
+								<li><a href="/media/9045239624610520" id="_media" class="ajax-load">Meediahaldus</a></li>
+								<li><a href="/tube/9045239624610520" id="_tube" class="ajax-load">Videosirvik</a></li>
 
-						</ul>
+							</ul>
 						</li><li>
 						<a href="#"><i class="fa fa-wrench"></i> <span class="nav-label">Juhi töölaud</span><span class="fa arrow"></span></a>
 						<ul class="nav nav-second-level">
@@ -124,24 +137,24 @@
 							<a class="navbar-minimalize minimalize-styl-2 btn btn-primary " href="#"><i class="fa fa-bars"></i> </a>
 
 							<ul class="nav navbar-nav">
-							<li class="dropdown">
-                        <a aria-expanded="false" role="button" href="#" class="dropdown-toggle" data-toggle="dropdown"> Dokumendid <span class="caret"></span></a>
-                        <ul role="menu" class="dropdown-menu">
-                            <li><a href="">Menu item</a></li>
-                            <li><a href="">Menu item</a></li>
-                            <li><a href="">Menu item</a></li>
-                            <li><a href="">Menu item</a></li>
-                        </ul>
-                    </li>
-                    <li class="dropdown">
-                        <a aria-expanded="false" role="button" href="#" class="dropdown-toggle" data-toggle="dropdown"> Ülikool <span class="caret"></span></a>
-                        <ul role="menu" class="dropdown-menu">
-                            <li><a href="">Menu item</a></li>
-                            <li><a href="">Menu item</a></li>
-                            <li><a href="">Menu item</a></li>
-                            <li><a href="">Menu item</a></li>
-                        </ul>
-                    </li>
+								<li class="dropdown">
+									<a aria-expanded="false" role="button" href="#" class="dropdown-toggle" data-toggle="dropdown"> Dokumendid <span class="caret"></span></a>
+									<ul role="menu" class="dropdown-menu">
+										<li><a href="">Menu item</a></li>
+										<li><a href="">Menu item</a></li>
+										<li><a href="">Menu item</a></li>
+										<li><a href="">Menu item</a></li>
+									</ul>
+								</li>
+								<li class="dropdown">
+									<a aria-expanded="false" role="button" href="#" class="dropdown-toggle" data-toggle="dropdown"> Ülikool <span class="caret"></span></a>
+									<ul role="menu" class="dropdown-menu">
+										<li><a href="">Menu item</a></li>
+										<li><a href="">Menu item</a></li>
+										<li><a href="">Menu item</a></li>
+										<li><a href="">Menu item</a></li>
+									</ul>
+								</li>
 								<li class="dropdown dropdown-large">
 									<a aria-expanded="false" role="button" href="#" class="dropdown-toggle" data-toggle="dropdown"> Inimesed <span class="caret"></span></a>
 									<ul class="dropdown-menu dropdown-menu-large row">
@@ -281,69 +294,69 @@
 
 						</div>
 						<ul class="nav navbar-top-links navbar-right">
-								<li class="dropdown">
-									<a class="dropdown-toggle count-info" data-toggle="dropdown" href="#">
-										<i class="fa fa-bell"></i>  <span class="label label-primary">3</span>
-									</a>
-									<ul class="dropdown-menu dropdown-alerts">
-										<li>
-											<a href="mailbox.html">
-												<div>
-													<i class="fa fa-envelope fa-fw"></i> Sul on 3 uut sõnumit
-													<span class="pull-right text-muted small">19 minutit tagasi</span>
-												</div>
-											</a>
-										</li>
-										<li class="divider"></li>
-										<li>
-											<a href="profile.html">
-												<div>
-													<i class="fa fa-calendar-o fa-fw"></i> Täna plaanis 2 sündmust
-													<span class="pull-right text-muted small">56 minutit tagasi</span>
-												</div>
-											</a>
-										</li>
-										<li class="divider"></li>
-										<li>
-											<a href="grid_options.html">
-												<div>
-													<i class="fa fa-upload fa-fw"></i> Kõik uuendused tehtud
-													<span class="pull-right text-muted small">4h tagasi</span>
-												</div>
-											</a>
-										</li>
-										<li class="divider"></li>
-										<li>
-											<div class="text-center link-block">
-												<a href="notifications.html">
-													<strong>Vaata kõiki teavitusi</strong>
-													<i class="fa fa-angle-right"></i>
-												</a>
+							<li class="dropdown">
+								<a class="dropdown-toggle count-info" data-toggle="dropdown" href="#">
+									<i class="fa fa-bell"></i>  <span class="label label-primary">3</span>
+								</a>
+								<ul class="dropdown-menu dropdown-alerts">
+									<li>
+										<a href="mailbox.html">
+											<div>
+												<i class="fa fa-envelope fa-fw"></i> Sul on 3 uut sõnumit
+												<span class="pull-right text-muted small">19 minutit tagasi</span>
 											</div>
-										</li>
-									</ul>
-								</li>
-								<li class="show-icon">
-									<a href="login.html">
-										<i class="fa fa-sign-out"></i>
-									</a>
-								</li>
-								<li  class="show-icon">
-									<a class="right-sidebar-toggle">
-										<i class="fa fa-tasks"></i>
-									</a>
-								</li>
-							</ul>
-							<ul class="nav navbar-top-links navbar-right">
-								<form class="navbar-form " role="search">
-									<div class="input-group">
-										<input type="text" class="form-control" placeholder="Otsi midagi..." name="srch-term" id="srch-term">
-										<div class="input-group-btn">
-											<button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
+										</a>
+									</li>
+									<li class="divider"></li>
+									<li>
+										<a href="profile.html">
+											<div>
+												<i class="fa fa-calendar-o fa-fw"></i> Täna plaanis 2 sündmust
+												<span class="pull-right text-muted small">56 minutit tagasi</span>
+											</div>
+										</a>
+									</li>
+									<li class="divider"></li>
+									<li>
+										<a href="grid_options.html">
+											<div>
+												<i class="fa fa-upload fa-fw"></i> Kõik uuendused tehtud
+												<span class="pull-right text-muted small">4h tagasi</span>
+											</div>
+										</a>
+									</li>
+									<li class="divider"></li>
+									<li>
+										<div class="text-center link-block">
+											<a href="notifications.html">
+												<strong>Vaata kõiki teavitusi</strong>
+												<i class="fa fa-angle-right"></i>
+											</a>
 										</div>
+									</li>
+								</ul>
+							</li>
+							<li class="show-icon">
+								<a href="login.html">
+									<i class="fa fa-sign-out"></i>
+								</a>
+							</li>
+							<li  class="show-icon">
+								<a class="right-sidebar-toggle">
+									<i class="fa fa-tasks"></i>
+								</a>
+							</li>
+						</ul>
+						<ul class="nav navbar-top-links navbar-right navbar-search">
+							<form class="navbar-form" role="search">
+								<div class="input-group">
+									<input type="text" class="form-control" placeholder="Otsi midagi..." name="srch-term" id="srch-term">
+									<div class="input-group-btn">
+										<button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
 									</div>
-								</form>
-							</ul>
+								</div>
+							</form>
+						</ul>
 
 					</nav>
 				</div>
@@ -409,62 +422,62 @@
 						</div>
 						<div class="row">
 							<div class="col-xs-12">
-									<button type="button" id="expenditure-new" class="btn btn-sm btn-white center-block">Lisa</button>
-								</div>
+								<button type="button" id="expenditure-new" class="btn btn-sm btn-white center-block">Lisa</button>
+							</div>
 						</div>
 						<!--<div class="row">
-							<div class="col-xs-6 text-right">Tahan täita kulude sektsiooni</div>
-							<div class="col-xs-6">
-								<div class="btn-group">
-									<button type="button" id="expenditure-yes" class="btn btn-sm btn-default">Jah</button>
-									<button type="button" id="expenditure-no" class="btn btn-sm btn-white">Ei</button>
-								</div>
-							</div>
-						</div>
-						<div id="expenditure">
-							<table class="table table-striped">
-								<thead>
-									<tr>
-										<th>Kulu liik</th>
-										<th>Selgitus</th>
-										<th>Avansi soov</th>
-										<th>Summa</th>
-									</tr>
-								</thead>
-								<tbody>
-									<tr>
-										<td>Päevaraha</td>
-										<td>Lisa selgitus</td>
-										<td>Ei</td>
-										<td>Sisesta summa</td>
-									</tr>
-									<tr>
-										<td>Päevaraha</td>
-										<td>Lisa selgitus</td>
-										<td>Ei</td>
-										<td>Sisesta summa</td>
-									</tr>
-									<tr>
-										<td>Päevaraha</td>
-										<td>Lisa selgitus</td>
-										<td>Ei</td>
-										<td>Sisesta summa</td>
-									</tr>
-								</tbody>
-							</table>
-							<div class="row m-t">
-								<div class="col-xs-6 text-right">Päevaraha</div><div class="col-xs-3"><a href="#" id="daily-cost" data-type="text" data-pk="1" data-value="" data-title="enter amount" style="color: gray; display: inline;">1000 €</a><a href="#" id="daily-cost-comment" data-type="select" data-pk="1" data-value="" data-title="Select sex" class="editable editable-click" style="color: gray; display: inline;"> Lisa selgitus</a></div>
-							</div>
-							<div class="row">
-								<div class="col-xs-6 text-right">Sõidukulu</div><div class="col-xs-6"><a href="#" id="travel-cost" data-type="select" data-pk="1" data-value="" data-title="Select sex" class="editable editable-click" style="color: gray; display: inline;">Sisesta summa</a></div>
-							</div>
-							<div class="row">
-								<div class="col-xs-6 text-right">Majutuskulu</div><div class="col-xs-6"><a href="#" id="accomodation-cost" data-type="select" data-pk="1" data-value="" data-title="Select sex" class="editable editable-click" style="color: gray; display: inline;">Sisesta summa</a></div>
-							</div>
-							<div class="row">
-								<div class="col-xs-6 text-right">Muud kulud</div><div class="col-xs-6"><a href="#" id="other-cost" data-type="select" data-pk="1" data-value="" data-title="Select sex" class="editable editable-click" style="color: gray; display: inline;">Sisesta summa</a></div>
-							</div>
-						</div>-->
+<div class="col-xs-6 text-right">Tahan täita kulude sektsiooni</div>
+<div class="col-xs-6">
+<div class="btn-group">
+<button type="button" id="expenditure-yes" class="btn btn-sm btn-default">Jah</button>
+<button type="button" id="expenditure-no" class="btn btn-sm btn-white">Ei</button>
+</div>
+</div>
+</div>
+<div id="expenditure">
+<table class="table table-striped">
+<thead>
+<tr>
+<th>Kulu liik</th>
+<th>Selgitus</th>
+<th>Avansi soov</th>
+<th>Summa</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>Päevaraha</td>
+<td>Lisa selgitus</td>
+<td>Ei</td>
+<td>Sisesta summa</td>
+</tr>
+<tr>
+<td>Päevaraha</td>
+<td>Lisa selgitus</td>
+<td>Ei</td>
+<td>Sisesta summa</td>
+</tr>
+<tr>
+<td>Päevaraha</td>
+<td>Lisa selgitus</td>
+<td>Ei</td>
+<td>Sisesta summa</td>
+</tr>
+</tbody>
+</table>
+<div class="row m-t">
+<div class="col-xs-6 text-right">Päevaraha</div><div class="col-xs-3"><a href="#" id="daily-cost" data-type="text" data-pk="1" data-value="" data-title="enter amount" style="color: gray; display: inline;">1000 €</a><a href="#" id="daily-cost-comment" data-type="select" data-pk="1" data-value="" data-title="Select sex" class="editable editable-click" style="color: gray; display: inline;"> Lisa selgitus</a></div>
+</div>
+<div class="row">
+<div class="col-xs-6 text-right">Sõidukulu</div><div class="col-xs-6"><a href="#" id="travel-cost" data-type="select" data-pk="1" data-value="" data-title="Select sex" class="editable editable-click" style="color: gray; display: inline;">Sisesta summa</a></div>
+</div>
+<div class="row">
+<div class="col-xs-6 text-right">Majutuskulu</div><div class="col-xs-6"><a href="#" id="accomodation-cost" data-type="select" data-pk="1" data-value="" data-title="Select sex" class="editable editable-click" style="color: gray; display: inline;">Sisesta summa</a></div>
+</div>
+<div class="row">
+<div class="col-xs-6 text-right">Muud kulud</div><div class="col-xs-6"><a href="#" id="other-cost" data-type="select" data-pk="1" data-value="" data-title="Select sex" class="editable editable-click" style="color: gray; display: inline;">Sisesta summa</a></div>
+</div>
+</div>-->
 						<!--______ 3RD BLOCK ERRAND FORM END ______-->
 						<!--_______MODAL CONTENT __________________-->
 						<div id="right-sidebar" class="">
