--- a/public/index_draggable.html
+++ b/public/index_draggable.html
@@ -26,7 +26,7 @@
 			<div id="page-wrapper" class="gray-darker-bg">
 				<!--_________ NAVBAR BEGIN ___________-->
 				<div class="row">
-					<nav class="navbar navbar-static-top cherry-bg" role="navigation">
+					<nav class="navbar navbar-static-top white-bg" role="navigation">
 						<div class="navbar-header">
 							<button aria-controls="navbar" aria-expanded="false" data-target="#navbar" data-toggle="collapse" class="navbar-toggle collapsed pull-right" type="button">
 								<i class="fa fa-reorder"></i>
@@ -233,7 +233,14 @@
 								</li>
 							</ul>
 							<ul class="nav navbar-top-links navbar-right visible-md visible-lg">
-								<input type="text" class="form-control" placeholder="&#xF002; Otsi midagi..." name="srch-term" id="srch-term" style="font-family:Arial, FontAwesome">
+								<form class="navbar-form " role="search">
+									<div class="input-group">
+										<input type="text" class="form-control" placeholder="Otsi midagi..." name="srch-term" id="srch-term">
+										<div class="input-group-btn">
+											<button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
+										</div>
+									</div>
+								</form>
 							</ul>
 						</div>
 					</nav>
@@ -967,7 +974,7 @@ _________ END SMALL CHAT ________-->
 
 
 				/* initialize the calendar
-	 -----------------------------------------------------------------
+	 -----------------------------------------------------------------*/
 				var date = new Date();
 				var d = date.getDate();
 				var m = date.getMonth();
@@ -1041,7 +1048,7 @@ _________ END SMALL CHAT ________-->
 						}
 					],
 				});
-			}); //end*/
+			}); //end
 		</script>
 	</body>
 </html>
