--- a/public/lahetus_uld.html
+++ b/public/lahetus_uld.html
@@ -6,7 +6,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-		<title>TTÜ | Lähetused</title>
+		<title>TTÜ | Minu Lähetused</title>
 
 		<link href="css/bootstrap.min.css" rel="stylesheet">
 		<link href="font-awesome/css/font-awesome.css" rel="stylesheet">
@@ -375,352 +375,48 @@
 					<div class="col-sm-8">
 					</div>
 				</div>
-				<!--_______CONTENT _____________________________________-->
-				<div class="wrapper wrapper-content animated fadeInRight" style="font-size: 1.3em">
-					<!--______ 1ST BLOCK ERRAND FORM __________-->
-					<div>
-						<div class="row"><div class="col-sm- text-center font-bold m-b-xs">Üldandmed</div></div>
-						<div class="row">
-							<div class="col-xs-6 text-right">Lähetatu nimi</div><div class="col-xs-6"><a href="#" id="name" data-type="text" data-pk="1" data-url="/post">Peeter Kuusk</a></div>
-						</div>
-						<div class="row">
-							<div class="col-xs-6 text-right">Struktuuriüksus</div><div class="col-xs-6"><a href="#" id="department" data-type="text" data-pk="1" data-url="/post">Tarkvara osakond</a></div>
-						</div>
-						<div class="row">
-							<div class="col-xs-6 text-right">Amet</div><div class="col-xs-6"><a href="#" id="position" data-type="text" data-pk="1" data-url="/post">Arendusjuht</a></div>
-						</div>
-						<div class="row">
-							<div class="col-xs-6 text-right">Lähetuse kestus</div><div class="col-xs-6"><a href="#" id="errand_duration_b" data-type="combodate" data-value="2015-05-15" data-format="YYYY-MM-DD" data-viewformat="DD/MM/YYYY" data-template="D / MMM / YYYY" data-pk="1" data-original-title="Select Date of birth" class="editable editable-click">15/05/2015</a> - <a href="#" id="errand_duration_e" data-type="combodate" data-value="2015-05-19" data-format="YYYY-MM-DD" data-viewformat="DD/MM/YYYY" data-template="D / MMM / YYYY" data-pk="1" data-original-title="Select Date of birth" class="editable editable-click">19/05/2015</a></div>
-						</div>
-						<div class="row">
-							<div class="col-xs-6 text-right">Finantseerimise allikad</div><div class="col-xs-6"><a href="#" id="financing" data-type="text" data-pk="1" data-url="/post">NATO</a></div>
-						</div>
-					</div>
-					<!--______ 1ST BLOCK ERRAND FORM END ______-->
-					<!--______ 2ND BLOCK ERRAND FORM __________-->
-					<div>
-						<div class="row"><div class="col-sm-12 text-center font-bold m-b-xs m-t-md">Lähetuse sisu</div></div>
-						<div class="row">
-							<div class="col-xs-6 text-right">Sihtkoht</div><div class="col-xs-6"><a href="#" id="destination" data-type="text" data-pk="1" data-title="Please, fill address">Holland</a>
-							</div>
-						</div>
-						<div class="row">
-							<div class="col-xs-6 text-right">Organisatsioon</div><div class="col-xs-6"><a href="#" id="organization" data-type="text" data-pk="1" data-url="/post">MSG-117 </a></div>
-						</div>
-						<div class="row">
-							<div class="col-xs-6 text-right">Lähetuse eesmärk</div><div class="col-xs-6"><a href="#" id="errand_goal" data-type="text" data-pk="1" data-url="/post">MSG-117 töögrupi 8's kogunemine</a></div>
-						</div>
-						<div class="row">
-							<div class="col-xs-6 text-right">Sõiduvahend</div><div class="col-xs-6"><a href="#" id="transportation" data-type="checklist" data-value="1,4,5" data-title="Select transportation" class="editable editable-click" data-original-title="" title="">auto<br>laev<br>rong</a></div>
-						</div>
-					</div>
-					<!--______ 2ND BLOCK ERRAND FORM END ______-->
-					<!--______ 3RD BLOCK ERRAND FORM __________-->
-					<div>
-						<div class="row">
-							<div class="col-sm-12 text-center font-bold m-b-xs m-t-md">Planeeritavad kulud</div>
-						</div>
-						<div class="row">
-							<div class="col-xs-6 text-right">Päevaraha</div>
-							<div class="col-xs-6"><a href="#" id="daily-cost" data-type="text" data-pk="1" data-value="" data-title="enter amount" style="color: gray; display: inline;">1000 €</a>
-							</div>
-						</div>
-						<div class="row">
-							<div class="col-xs-6 text-right"></div>
-							<div class="col-xs-6 m-b-xs">
-								<a href="#" id="daily-cost-comment" data-type="select" data-pk="1" data-value="" data-title="Select sex" class="editable editable-click" style="color: gray; display: inline;"> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel rerum adipisci, ad ipsam! Assumenda quod temporibus distinctio soluta quam id laboriosam voluptatum nostrum ducimus iusto officiis, unde sint accusantium eligendi nihil hic repellendus tenetur sequi labore, quidem sapiente adipisci, eum veritatis tempore! Eum similique in earum, labore provident quidem tempora maxime doloremque impedit officia nemo, magni, ducimus, possimus enim sint.</a>
-							</div>
-						</div>
-						<div class="row">
-							<div class="col-xs-6 text-right"></div>
-							<div class="col-xs-6 m-b">
-								<span>Soovin avansi</span>
-							</div>
-						</div>
-						<div class="row">
-							<div class="col-xs-6 text-right">Sõidukulu</div><div class="col-xs-6"><a href="#" id="travel-cost" data-type="select" data-pk="1" data-value="" data-title="Select sex" class="editable editable-click" style="color: gray; display: inline;">Sisesta summa</a></div>
-								<div class="row">
-							<div class="col-xs-6 text-right"></div>
-							<div class="col-xs-6">
-								<a href="#" id="daily-cost-comment" data-type="select" data-pk="1" data-value="" data-title="Select sex" class="editable editable-click" style="color: gray; display: inline;"> Lisa selgitus</a>
-							</div>
-						</div>
-						<div class="row">
-							<div class="col-xs-6 text-right"></div>
-							<div class="col-xs-6 m-b">
-								<span>Ei soovi avansi</span>
-							</div>
-						</div>
-						</div>
-						<div class="row">
-							<div class="col-xs-6 text-right">Majutuskulu</div><div class="col-xs-6"><a href="#" id="accomodation-cost" data-type="select" data-pk="1" data-value="" data-title="Select sex" class="editable editable-click" style="color: gray; display: inline;">Sisesta summa</a></div>
-						</div>
-							<div class="row">
-							<div class="col-xs-6 text-right"></div>
-							<div class="col-xs-6">
-								<a href="#" id="daily-cost-comment" data-type="select" data-pk="1" data-value="" data-title="Select sex" class="editable editable-click" style="color: gray; display: inline;"> Lisa selgitus</a>
-							</div>
-						</div>
-						<div class="row">
-							<div class="col-xs-6 text-right"></div>
-							<div class="col-xs-6 m-b">
-								<span>Ei soovi avansi</span>
-							</div>
-						</div>
-						<div class="row">
-							<div class="col-xs-6 text-right">Muud kulud</div><div class="col-xs-6"><a href="#" id="other-cost" data-type="select" data-pk="1" data-value="" data-title="Select sex" class="editable editable-click" style="color: gray; display: inline;">Sisesta summa</a></div>
-						</div>
-							<div class="row">
-							<div class="col-xs-6 text-right"></div>
-							<div class="col-xs-6">
-								<a href="#" id="daily-cost-comment" data-type="select" data-pk="1" data-value="" data-title="Select sex" class="editable editable-click" style="color: gray; display: inline;"> Lisa selgitus</a>
-							</div>
-						</div>
-						<div class="row">
-							<div class="col-xs-6 text-right"></div>
-							<div class="col-xs-6">
-								<span>Ei soovi avansi</span>
-							</div>
-						</div>
-						<div class="row">
-							<div class="col-md-4"></div>
-							<div class="col-md-4 text-right">
-								<div class="hr-line-solid"></div>
-							</div>
-						</div>
-						<div class="row">
-							<div class="col-xs-6 text-right">Kokku</div><div class="col-xs-6 m-b"><a href="#" id="total-cost" data-type="select" data-pk="1" data-value="" data-title="Select sex" class="editable editable-click" style="color: gray; display: inline;">1000€</a></div>
-						</div>
-
-						<div class="row">
-							<div class="col-lg-4 text-right"></div>
-							<div class="col-lg-4 m-t-lg m-b-lg">
-								<div style="border: 1px solid #c9c9c9; padding: 10px">Olen töölähetuse tingimustega nõus ning teadlik, et tähtajaks tagastamata avansi võib tööandja minu palgast kinni pidada.</div>
-							</div>
-						</div>
-						<div class="row">
-							<div class="col-xs-6 text-right">
-								<button class="btn btn-primary">Tühista</button>
-							</div>
-							<div class="col-xs-6 m-b">
-								<span><button class="btn btn-primary">Salvesta</button></span>
-							</div>
-						</div>
-
-						<!--______ 3RD BLOCK ERRAND FORM END ______-->
-						<!--_______MODAL CONTENT __________________-->
-						<div id="right-sidebar" class="">
-							<div class="slimScrollDiv" style="position: relative; overflow: hidden; width: auto; height: 100%;">
-								<div class="sidebar-container" style="overflow: hidden; width: auto; height: 100%;">
-
-									<ul class="nav nav-tabs navs-3">
-
-										<li class="active"><a data-toggle="tab" href="#tab-11" aria-expanded="true">
-											Valik 1
-											</a>
-										</li>
-										<li><a data-toggle="tab" href="#tab-22">
-											Valik 2
-											</a>
-										</li>
-										<li class="">
-											<a data-toggle="tab" href="#tab-33" aria-expanded="false">
-												<i class="fa fa-gear"></i>
-											</a>
-										</li>
-									</ul>
-
-									<div class="tab-content">
-
-
-										<div id="tab-11" class="tab-pane active">
-											<div class="sidebar-title">
-												<h3> <i class="fa fa-folder"></i> Minu failid</h3>
-												<small><i class="fa fa-tim"></i> Kaustas on 2 dokumenti</small>
-											</div>
-											<div>
-												<ul class="sidebar-list">
-													<li class="">
-														<a href="#" class="">
-															<div class="pull-left text-center m-r">
-																<i class="fa fa-file-text-o fa-3x"></i>
-															</div>
-															<div class="m-l m-b-xs">Puhkuste graafiku koostamise juhend ja soovitused tuleviku mudeli laiendamiseks.pdf</div>
-															<div class="small text-muted pull-right ">Lisatud 15.02.2015</div>
-														</a>
-													</li>
-													<li>
-														<a href="#">
-															<div class="pull-left text-center m-r">
-																<i class="fa fa-file-text-o fa-3x"></i>
-															</div>
-															<div class="m-l m-b-xs">Majandusaruande kolmas lisa ja seletused.pdf</div>
-															<div class="small text-muted pull-right">Lisatud 12.06.2014</div>
-														</a>
-													</li>
-												</ul>
-											</div>
-
-										</div>
-
-										<div id="tab-22" class="tab-pane">
-
-											<div class="sidebar-title">
-												<h3> <i class="fa fa-cube"></i> Viimased uuendused</h3>
-												<small><i class="fa fa-tim"></i> Paigaldatud 14 uuendust. 1 on paigaldamata.</small>
-											</div>
-
-											<ul class="sidebar-list">
-												<li>
-													<a href="#">
-														<div class="small pull-right m-t-xs">5 tundi tagasi</div>
-														<h4>Versiooni uuendus 1.0.0.14</h4>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Optio accusantium saepe id.
-
-														<div class="small">Paigaldatud: 22%</div>
-														<div class="progress progress-mini">
-															<div style="width: 22%;" class="progress-bar progress-bar-warning"></div>
-														</div>
-														<div class="small text-muted m-t-xs">Paigalduse lõpuni 3 minutit</div>
-													</a>
-												</li>
-											</ul>
-
-										</div>
-
-										<div id="tab-33" class="tab-pane">
-
-											<div class="sidebar-title">
-												<h3><i class="fa fa-gears"></i> Sätted</h3>
-												<small><i class="fa fa-tim"></i> Siin saad muuta oma põhisätteid</small>
-											</div>
-
-											<div class="setings-item">
-												<span>
-													Näita teateid
-												</span>
-												<div class="switch">
-													<div class="onoffswitch">
-														<input type="checkbox" name="collapsemenu" class="onoffswitch-checkbox" id="example">
-														<label class="onoffswitch-label" for="example">
-															<span class="onoffswitch-inner"></span>
-															<span class="onoffswitch-switch"></span>
-														</label>
-													</div>
-												</div>
-											</div>
-											<div class="setings-item">
-												<span>
-													Keela messenger
-												</span>
-												<div class="switch">
-													<div class="onoffswitch">
-														<input type="checkbox" name="collapsemenu" checked="" class="onoffswitch-checkbox" id="example2">
-														<label class="onoffswitch-label" for="example2">
-															<span class="onoffswitch-inner"></span>
-															<span class="onoffswitch-switch"></span>
-														</label>
-													</div>
-												</div>
-											</div>
-											<div class="setings-item">
-												<span>
-													Luba ajaloo salvestus
-												</span>
-												<div class="switch">
-													<div class="onoffswitch">
-														<input type="checkbox" name="collapsemenu" class="onoffswitch-checkbox" id="example3">
-														<label class="onoffswitch-label" for="example3">
-															<span class="onoffswitch-inner"></span>
-															<span class="onoffswitch-switch"></span>
-														</label>
-													</div>
-												</div>
-											</div>
-											<div class="setings-item">
-												<span>
-													Näita tabeleid
-												</span>
-												<div class="switch">
-													<div class="onoffswitch">
-														<input type="checkbox" name="collapsemenu" class="onoffswitch-checkbox" id="example4">
-														<label class="onoffswitch-label" for="example4">
-															<span class="onoffswitch-inner"></span>
-															<span class="onoffswitch-switch"></span>
-														</label>
-													</div>
-												</div>
-											</div>
-											<div class="setings-item">
-												<span>
-													Kasutaja teavitused
-												</span>
-												<div class="switch">
-													<div class="onoffswitch">
-														<input type="checkbox" checked="" name="collapsemenu" class="onoffswitch-checkbox" id="example5">
-														<label class="onoffswitch-label" for="example5">
-															<span class="onoffswitch-inner"></span>
-															<span class="onoffswitch-switch"></span>
-														</label>
-													</div>
-												</div>
-											</div>
-											<div class="setings-item">
-												<span>
-													Globaalne otsing
-												</span>
-												<div class="switch">
-													<div class="onoffswitch">
-														<input type="checkbox" checked="" name="collapsemenu" class="onoffswitch-checkbox" id="example6">
-														<label class="onoffswitch-label" for="example6">
-															<span class="onoffswitch-inner"></span>
-															<span class="onoffswitch-switch"></span>
-														</label>
-													</div>
-												</div>
-											</div>
-											<div class="setings-item">
-												<span>
-													Uuenda igapäev
-												</span>
-												<div class="switch">
-													<div class="onoffswitch">
-														<input type="checkbox" name="collapsemenu" class="onoffswitch-checkbox" id="example7">
-														<label class="onoffswitch-label" for="example7">
-															<span class="onoffswitch-inner"></span>
-															<span class="onoffswitch-switch"></span>
-														</label>
-													</div>
-												</div>
-											</div>
-											<div class="sidebar-content">
-												<h4>Sätted</h4>
-												<div class="small">
-													Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia doloremque ducimus, iste cum molestiae unde recusandae dolorem necessitatibus, quod? Pariatur officia omnis aperiam doloribus, impedit ipsa laborum provident accusamus quos obcaecati mollitia beatae. Placeat, totam, fugiat. Ad architecto repudiandae, non.
-												</div>
-											</div>
-										</div>
-									</div>
-								</div>
-								<div class="slimScrollBar" style="width: 7px; position: absolute; top: 0px; opacity: 0.4; display: none; border-radius: 7px; z-index: 99; right: 1px; height: 894px; background: rgb(0, 0, 0);"></div>
-								<div class="slimScrollRail" style="width: 7px; height: 100%; position: absolute; top: 0px; display: none; border-radius: 7px; opacity: 0.4; z-index: 90; right: 1px; background: rgb(51, 51, 51);"></div>
-							</div>
-						</div>
-						<!--_______MODAL CONTENT END_______________-->
-						<!--______ CONTENT END _______________________ -->
-						<!--______ FOOTER ____________________________ -->
-						<div class="footer">
-							<div class="pull-right">
-								10GB of <strong>250GB</strong> Free.
-							</div>
-							<div>
-								<strong>Copyright</strong> Example Company &copy; 2014-2015
-							</div>
-						</div>
-						<!--______ FOOTER END ________________________ -->
-					</div>
-					<!--______ 3RD BLOCK ERRAND FORM END ______-->
-				</div>
-				<!--_________CONTENT END_______________________________-->
+				<!--_______PAGE _____________________________________-->
+				<table class="table table-striped">
+					<thead>
+						<tr>
+							<th>Algus</th>
+							<th>Lõpp</th>
+							<th>Sihtkoht</th>
+							<th>Korraldus</th>
+							<th>Aruanne</th>
+						</tr>
+					</thead>
+					<tbody>
+					<h3 class="m-t-lg m-b "><a class="btn btn-outline btn-primary" href="#"><i class="fa fa-plus"></i> Lisa endale uus lähetus</a></h3>
+						<tr>
+							<td>2015-06-15</td>
+							<td>2015-06-19</td>
+							<td>Holland, Leyden</td>
+							<td><span class="badge badge-success">OK</span><a> <i class="fa fa-folder-open-o"></i></a></td>
+							<td><span class="badge badge-success">OK</span><a> <i class="fa fa-folder-open-o"></i></a></td>
+						</tr>
+<tr>
+							<td>2015-08-06</td>
+							<td>2015-08-12</td>
+							<td>Portugal, Lissabon</td>
+							<td><span class="badge badge-success">OK</span><a> <i class="fa fa-folder-open-o"></i></a></td>
+							<td><span class="badge badge-success">OK</span><a> <i class="fa fa-folder-open-o"></i></a></td>
+						</tr><tr>
+							<td>2015-09-11</td>
+							<td>2015-09-27</td>
+							<td>Türgi, Istanbul</td>
+							<td><span class="badge badge-success">OK</span><a> <i class="fa fa-folder-open-o"></i></a></td>
+							<td><span class="badge badge-success">OK</span><a> <i class="fa fa-folder-open-o"></i></a></td>
+						</tr><tr>
+							<td>2016-02-02</td>
+							<td>2016-02-07</td>
+							<td>Itaalia, Rooma</td>
+							<td><span class="badge badge-success">OK</span><a> <i class="fa fa-folder-open-o"></i></a></td>
+							<td><span class="badge badge-success">OK</span><a> <i class="fa fa-folder-open-o"></i></a></td>
+						</tr>
+					</tbody>
+				</table>
+				<!--_________PAGE END_______________________________-->
 				<!-- Mainly scripts -->
 				<script src="js/jquery-2.1.1.js"></script>
 				<script src="js/bootstrap.min.js"></script>
